--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@nuxt/eslint": "^0.6.1",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "nuxt": "^3.14.0",
     "sass": "^1.80.6",
     "vue": "latest",
@@ -18,6 +20,8 @@
   },
   "devDependencies": {
     "typescript": "^5.6.3",
-    "vue-tsc": "^2.1.10"
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue-tsc": "^2.1.10",
+    "vuetify": "^3.7.4"
   }
 }
