--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@mdi/font": "^7.4.47",
     "@nuxt/eslint": "^0.6.1",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "^0.7.0",
     "nuxt": "^3.14.0",
+    "pinia-plugin-persistedstate": "^4.1.2",
     "sass": "^1.80.6",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-uuid": "^3.0.0",
+    "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
     "vite-plugin-vuetify": "^2.0.4",
-    "vue-tsc": "^2.1.10",
-    "vuetify": "^3.7.4"
+    "vue-tsc": "^2.1.10"
   }
 }
