--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.7.0",
     "nuxt": "^3.14.0",
-    "pinia-plugin-persistedstate": "^4.1.2",
     "sass": "^1.80.6",
     "vue": "latest",
     "vue-router": "latest",
@@ -24,7 +23,9 @@
   },
   "devDependencies": {
     "typescript": "^5.6.3",
-    "vite-plugin-vuetify": "^2.0.4",
     "vue-tsc": "^2.1.10"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
